# AI-Inference-Platform-SDD

./: .dockerignore  .gitignore  AGENTS.md  README.md  backend_logs.txt  docker-compose.yml  nohup.out  ollama_proxy.py  start_backend.sh
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: api_keys.py  auth.py  inference.py  orgs.py  users.py
backend/app/core/: auth.py  metrics.py  permissions.py  rate_limiter.py
backend/app/db/: base_models.py  seed_admin.py  session.py  setup.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 003_add_unified_auth.py  3a1a80ecff9b_initial_schema.py  843b6cacbbcc_add_organisations_table_v2.py  c64f9caead9f_add_usage_logs_and_model_registry.py
backend/app/models/: api_key.py  base.py  organisation.py  usage_log.py  user.py
backend/app/schemas/: api_key.py  auth.py  base.py  inference.py  org.py  user.py
backend/app/services/: api_key_service.py  auth_service.py  email_service.py  inference_service.py  org_service.py  user_service.py
backend/app/tests/: test_auth.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
observability/: prometheus.yml
(+50 files in other folders)
