[project]
name = "inference-platform-backend"
version = "0.1.0"
description = "AI Inference Platform Backend"
authors = [
    {name = "Muhamed Jasim"}
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.1",
    "email-validator>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.6",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0"
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
